force-app/main/default/objects/LittleBitsTrigger__c/LittleBitsTrigger__c.object-meta.xml
<CustomObject>
    <label>LittleBits Record Trigger</label>
    <nameField>
        <label>LittleBits Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LittleBits Record Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>