force-app/main/default/objects/LittleBitsTrigger__c/fields/DeviceID__c.field-meta.xml
<CustomField>
    <fullName>DeviceID__c</fullName>
    <inlineHelpText
  >Optional, if the LittleBits API Custom Setting is configured.</inlineHelpText>
    <label>Device ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>