force-app/main/default/objects/LittleBitsTrigger__c/fields/DurationInMilliseconds__c.field-meta.xml
<CustomField>
    <fullName>DurationInMilliseconds__c</fullName>
    <label>Duration in Milliseconds</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>