force-app/main/default/objects/LittleBitsTrigger__c/fields/DurationInMillisecondsField__c.field-meta.xml
<CustomField>
    <fullName>DurationInMillisecondsField__c</fullName>
    <label>Duration in Milliseconds Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>