force-app/main/default/objects/LittleBitsTrigger__c/fields/PercentField__c.field-meta.xml
<CustomField>
    <fullName>PercentField__c</fullName>
    <label>Percent Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>