force-app/main/default/objects/LittleBitsTrigger__c/fields/WhenFieldsModified__c.field-meta.xml
<CustomField>
    <fullName>WhenFieldsModified__c</fullName>
    <inlineHelpText
  >A list of fields, separated by a comma, that will cause the trigger to fire if modified.</inlineHelpText>
    <label>When Fields Modified</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>