force-app/main/default/objects/LittleBitsTrigger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WhenFieldsModified__c</columns>
    <columns>RecordLink__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>